feat: Add support for custom justifications (#39)
- Added a way to specify a class implements a Java interface.