@@ -2,15 +2,19 @@ package ai.timefold.jpyinterpreter;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.function.ToIntFunction;
 
 import ai.timefold.jpyinterpreter.opcodes.descriptor.ControlOpDescriptor;
+import ai.timefold.jpyinterpreter.opcodes.descriptor.DunderOpDescriptor;
 import ai.timefold.jpyinterpreter.types.BuiltinTypes;
 import ai.timefold.jpyinterpreter.types.PythonLikeFunction;
 import ai.timefold.jpyinterpreter.types.PythonLikeType;
 import ai.timefold.jpyinterpreter.types.PythonString;
+import ai.timefold.jpyinterpreter.types.collections.PythonLikeTuple;
 import ai.timefold.jpyinterpreter.types.numeric.PythonInteger;
 import ai.timefold.jpyinterpreter.util.PythonFunctionBuilder;
 
@@ -41,7 +45,8 @@ public class PythonClassTranslatorTest {
                 .op(ControlOpDescriptor.RETURN_VALUE)
                 .build();
 
-        compiledClass.annotations = List.of();
+        compiledClass.annotations = Collections.emptyList();
+        compiledClass.javaInterfaces = Collections.emptyList();
         compiledClass.className = "MyClass";
         compiledClass.superclassList = List.of(BuiltinTypes.BASE_TYPE);
         compiledClass.staticAttributeNameToObject = Map.of("type_variable", new PythonString("type_value"));
@@ -94,7 +99,8 @@ public class PythonClassTranslatorTest {
             PythonCompiledFunction comparisonFunction = getCompareFunction.apply(compareOp);
 
             PythonCompiledClass compiledClass = new PythonCompiledClass();
-            compiledClass.annotations = List.of();
+            compiledClass.annotations = Collections.emptyList();
+            compiledClass.javaInterfaces = Collections.emptyList();
             compiledClass.className = "MyClass";
             compiledClass.superclassList = List.of(BuiltinTypes.BASE_TYPE);
             compiledClass.staticAttributeNameToObject = Map.of();
@@ -163,7 +169,8 @@ public class PythonClassTranslatorTest {
                 .build();
 
         PythonCompiledClass compiledClass = new PythonCompiledClass();
-        compiledClass.annotations = List.of();
+        compiledClass.annotations = Collections.emptyList();
+        compiledClass.javaInterfaces = Collections.emptyList();
         compiledClass.className = "MyClass";
         compiledClass.superclassList = List.of(BuiltinTypes.BASE_TYPE);
         compiledClass.staticAttributeNameToObject = Map.of();
@@ -208,5 +215,114 @@ public class PythonClassTranslatorTest {
                 .isEqualTo(PythonInteger.valueOf(2).hashCode());
         assertThat(object3.hashCode())
                 .isEqualTo(PythonInteger.valueOf(Long.MAX_VALUE).hashCode());
+    }
+
+    @Test
+    public void testPythonClassSimpleInterface() throws ClassNotFoundException {
+        PythonCompiledFunction initFunction = PythonFunctionBuilder.newFunction("self", "value")
+                .loadParameter("value")
+                .loadParameter("self")
+                .storeAttribute("value")
+                .loadConstant(null)
+                .op(ControlOpDescriptor.RETURN_VALUE)
+                .build();
+
+        PythonCompiledFunction applyAsInt = PythonFunctionBuilder.newFunction("self", "value")
+                .loadParameter("self")
+                .getAttribute("value")
+                .loadParameter("value")
+                .op(DunderOpDescriptor.BINARY_ADD)
+                .op(ControlOpDescriptor.RETURN_VALUE)
+                .build();
+
+        PythonCompiledClass compiledClass = new PythonCompiledClass();
+        compiledClass.annotations = Collections.emptyList();
+        compiledClass.javaInterfaces = List.of(ToIntFunction.class);
+        compiledClass.className = "MyClass";
+        compiledClass.superclassList = List.of(BuiltinTypes.BASE_TYPE);
+        compiledClass.staticAttributeNameToObject = Map.of();
+        compiledClass.staticAttributeNameToClassInstance = Map.of();
+        compiledClass.typeAnnotations = Map.of("key", TypeHint.withoutAnnotations(BuiltinTypes.INT_TYPE));
+        compiledClass.instanceFunctionNameToPythonBytecode = Map.of("__init__", initFunction,
+                "applyAsInt", applyAsInt);
+        compiledClass.staticFunctionNameToPythonBytecode = Map.of();
+        compiledClass.classFunctionNameToPythonBytecode = Map.of();
+
+        PythonLikeType classType = PythonClassTranslator.translatePythonClass(compiledClass);
+        Class<?> generatedClass = BuiltinTypes.asmClassLoader.loadClass(
+                classType.getJavaTypeInternalName().replace('/', '.'));
+
+        assertThat(generatedClass).hasPublicFields(PythonClassTranslator.getJavaFieldName("value"));
+        assertThat(generatedClass).hasPublicMethods(
+                PythonClassTranslator.getJavaMethodName("__init__"),
+                "applyAsInt");
+        assertThat(generatedClass).isAssignableTo(ToIntFunction.class);
+
+        var object1 = (ToIntFunction<PythonInteger>) classType.$call(List.of(PythonInteger.valueOf(1)), Map.of(), null);
+        var object2 = (ToIntFunction<PythonInteger>) classType.$call(List.of(PythonInteger.valueOf(2)), Map.of(), null);
+        var object3 = (ToIntFunction<PythonInteger>) classType.$call(List.of(PythonInteger.valueOf(3)), Map.of(), null);
+
+        assertThat(object1.applyAsInt(PythonInteger.valueOf(1))).isEqualTo(2);
+        assertThat(object2.applyAsInt(PythonInteger.valueOf(1))).isEqualTo(3);
+        assertThat(object3.applyAsInt(PythonInteger.valueOf(1))).isEqualTo(4);
+    }
+
+    public interface ComplexInterface {
+        int STATIC_FIELD = 10;
+
+        static int staticMethod() {
+            return STATIC_FIELD;
+        }
+
+        default void defaultMethod() {
+        }
+
+        int overloadedMethod();
+
+        int overloadedMethod(int value);
+    }
+
+    @Test
+    public void testPythonClassComplexInterface() throws ClassNotFoundException {
+        PythonCompiledFunction initFunction = PythonFunctionBuilder.newFunction("self")
+                .loadConstant(null)
+                .op(ControlOpDescriptor.RETURN_VALUE)
+                .build();
+
+        PythonCompiledFunction overloadedMethod = PythonFunctionBuilder.newFunction("self", "value")
+                .loadParameter("value")
+                .loadConstant(1)
+                .op(DunderOpDescriptor.BINARY_ADD)
+                .op(ControlOpDescriptor.RETURN_VALUE)
+                .build();
+
+        overloadedMethod.defaultPositionalArguments = PythonLikeTuple.fromItems(PythonInteger.ZERO);
+
+        PythonCompiledClass compiledClass = new PythonCompiledClass();
+        compiledClass.annotations = Collections.emptyList();
+        compiledClass.javaInterfaces = List.of(ComplexInterface.class);
+        compiledClass.className = "MyClass";
+        compiledClass.superclassList = List.of(BuiltinTypes.BASE_TYPE);
+        compiledClass.staticAttributeNameToObject = Map.of();
+        compiledClass.staticAttributeNameToClassInstance = Map.of();
+        compiledClass.typeAnnotations = Map.of("key", TypeHint.withoutAnnotations(BuiltinTypes.INT_TYPE));
+        compiledClass.instanceFunctionNameToPythonBytecode = Map.of("__init__", initFunction,
+                "overloadedMethod", overloadedMethod);
+        compiledClass.staticFunctionNameToPythonBytecode = Map.of();
+        compiledClass.classFunctionNameToPythonBytecode = Map.of();
+
+        PythonLikeType classType = PythonClassTranslator.translatePythonClass(compiledClass);
+        Class<?> generatedClass = BuiltinTypes.asmClassLoader.loadClass(
+                classType.getJavaTypeInternalName().replace('/', '.'));
+
+        assertThat(generatedClass).hasPublicMethods(
+                PythonClassTranslator.getJavaMethodName("__init__"),
+                "overloadedMethod");
+        assertThat(generatedClass).isAssignableTo(ComplexInterface.class);
+
+        var instance = (ComplexInterface) classType.$call(List.of(), Map.of(), null);
+
+        assertThat(instance.overloadedMethod()).isEqualTo(1);
+        assertThat(instance.overloadedMethod(1)).isEqualTo(2);
     }
 }
